rearrange home pg

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,37 +34,28 @@
             <img src="images/downtown.jpeg" alt="Downtown Apopka Florida">
         </div>
         <div class="container">
+            <section class="section">
+                <h3>Join the Apopka Chamber of Commerce</h3>
+                <p>Join here</p>
+                <p></p>
+            </section>
             <div class="weather">
                 <h2>Weather</h2>
                 <img id="weather-icon" src="scripts/weather.js" alt="#">
                 <span id="current-temp"></span><figcaption id="weather-description"></figcaption>
             </div>
         </div>
-            <div class="spotlights">
-                <h2 class="business-spotlight">Business Spotlight</h2>
-                <div class="business">
-                    <img class="spot" src="https://placeholder.jpeg/300x200.png" alt="place holder logo">
-                    <div class="business-info">
-                        <h3>Name of Business</h3>
-                        <p>Business Info</p>
-                    </div>
-                </div>
-                <div class="business">
-                    <img class="spot" src="https://placeholder.jpeg/300x200.png" alt="place holder logo">
-                    <div class="business-info">
-                        <h3>Name of Business</h3>
-                        <p>Business Info</p>
-                    </div>
+        <div class="spotlights">
+            <h2 class="business-spotlight">Business Spotlight</h2>
+            <div class="business">
+                <img class="spot" src="https://placeholder.jpeg/300x200.png" alt="place holder logo">
+                <div class="business-info">
+                    <h3>Name of Business</h3>
+                    <p>Business Info</p>
                 </div>
             </div>
 
-        </div>
-        <section class="section">
-            <h3>Join the Apopka Chamber of Commerce</h3>
-            <p>Join here</p>
-            <p></p>
-        </section>
-        <section class="card">
+        <section class="events">
             <h3>City Concerts & Events</h3>
             <div class="card">  
                 <h3>Event 1</h3>
@@ -87,7 +78,6 @@
                 <p>Location</p>
                 <p>Description</p>
             </div>
-        </div>
         </section>
 
     </main>
