--- a/form.html
+++ b/form.html
@@ -45,9 +45,8 @@
       </fieldset>
       <fieldset>
           <legend>Page Rating</legend>
-          <label class="slider">Page Rating Slider</label>
           <div id="rangeValue">1</div>
-            <input type="range" id="r" name="rating" min="1" max="10" value="0" step="1" list="rangeValues">
+            <input type="range" id="r" name="r" min="1" max="10" value="1" step="1" list="rangeValues">
             <datalist id="rangeValues">
             <option value="1">1</option>
             <option value="2">2</option>
@@ -60,7 +59,6 @@
             <option value="9">9</option>
             <option value="10">10</option>
             </datalist>
-          </div>
       </fieldset>
       <input type="submit" value="Rate My Page"  class="submitBtn">
       </form>
