--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
+    <link href="styles/form.css" rel="stylesheet">
 </head>
 <body>
     <header>
