changed legend to label...

--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
           <label class="top">Email* <input type="email" name="email" placeholder="someone@byui.edu" id="email" pattern="[a-zA-Z0-9._%+-]+@byui\.edu$" title="Please enter a valid email address." required></label>
       </fieldset>
       <fieldset>
-          <legend>Page Rating</legend>
+          <label>Page Rating</label>
           <div id="rangeValue">1</div>
             <input type="range" id="r" name="r" min="1" max="10" value="1" step="1" list="rangeValues">
             <datalist id="rangeValues">
