--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="images/hero-small.webp" media="(max-width: 500px)">
-                <img src="images/hero-large.webp" alt="Feather River California Temple" width="1500" height="998">
+                <source srcset="images/hero-large.webp" media="(max-width: 500px)">
+                <img src="images/hero-small.webp" alt="Feather River California Temple" width="1144" height="762">
             </picture>
             <div class="herolabel">
             <p>Feather River California</p>
