--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -87,5 +87,6 @@
     <script src="scripts/chamber.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/discover.js"></script>
 </body>
 </html>
