added id's but it didn't work

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -53,6 +53,8 @@
                                     • Official Chamber welcome promoting your business on social media</p>
                             </div>
                         </div>
+                </fieldset>
+                <fieldset class="member-grid">
                     <label class="sbs"><input type="radio" name="membership" value="bronze" onclick="showBenefit('bronze')"> Bronze Membership</label>
                     <div class="level-content" id="bronze-list">
                         <div class="benefits">
@@ -61,6 +63,8 @@
                                     • 2 listings in Chamber online directory</p>                            
                             </div>
                         </div>
+                </fieldset>        
+                <fieldset class="member-grid">
                     <label class="sbs"><input type="radio" name="membership" value="silver" onclick="showBenefit('silver')"> Silver Membership</label>
                         <div class="level-content" id="silver-list">
                             <div class="benefits">
@@ -71,6 +75,8 @@
                                     • Chamber member mailing labels</p>
                             </div>
                         </div>
+                </fieldset>
+                <fieldset class="member-grid">
                     <label class="sbs"><input type="radio" name="membership" value="gold" onclick="showBenefit('gold')"> Gold Membership</label>
                         <div class="level-content" id="gold-list">
                             <div class="benefits">
