--- a/chamber/join.html
+++ b/chamber/join.html
@@ -38,8 +38,9 @@
                 <label class="top">Business/Organization Name*<input type="text" name="business" required></label>
                 <label class="top">Job Title<input type="text" name="title"></label>
                 <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required></label>
-                <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
+                <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label><br>
             </fieldset>
+            <div>
             <fieldset>
                 <legend>Select Membership Level</legend>
                 <fieldset class="member-grid">
@@ -87,9 +88,11 @@
                             </div>
                         </div>
             </fieldset>
+        </div>
             <fieldset>
-                <legend>Business Description</legend>
-                <textarea id="comments" name="comments" placeholder="Please enter a description of your business or organization here."></textarea>
+                <legend>Business Description</legend><br>
+                <label><textarea id="comments" name="comments" placeholder="Please enter a description of your business or organization here."></textarea>
+                </label>
             </fieldset>
                 <input type="submit" value="Apply For Membership" class="submitBtn">
 
