home page again

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -22,7 +22,7 @@
     <nav>
         <a id="menu"></a>
         <ul class="navigation">
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li class="active"><a href="join.html">Join</a></li>
           <li><a href="discover.html">Discover</a></li>
           <li><a href="directory.html">Directory</a></li>
@@ -95,7 +95,6 @@
                 </label>
             </fieldset>
                 <input type="submit" value="Apply For Membership" class="submitBtn">
-
             <label class="timestamp"><input type="hidden" name="timestamp" id="timestamp"></label>
         </form>
     </main>
