added h2 and h2 css

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1 id="h1">City of Apopka Chamber of Commerce</h1>
+        <h1>City of Apopka Chamber of Commerce</h1>
     <nav>
         <a id="menu"></a>
         <ul class="navigation">
@@ -29,7 +29,7 @@
     </nav>
 </header>
     <main class="city-grid">
-        <h1>Discover Apopka</h1>
+        <h2>Discover Apopka</h2>
         <section class="sidebar">
             <div class="sidebar-card">
                 <div id="days">You Soared Back to Us!</div>
