--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             </div>
         </div>
         <h2>WDD 230: Web Frontend Development</h2>
-        <section class="card-box">
+        <section class="card">
             <h3>Learning Activities</h3>
-
+            <div src="scripts/links.js"></div>
         </section>
         <section class="card">
-            <h3>Information</h3>
+            <h3>WEATHER</h3>
             <div class="weather">
                 <img id="weather-icon" src="scripts/weather.js" alt="#">
                 <span id="current-temp"></span><figcaption id="weather-description"></figcaption>
