--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
     </nav>
     <main class="grid-home">
         <div class="hero">
-            <div class="hero-title">Apopka Chamber of Commerce</div>           
+            <h2>Apopka Chamber of Commerce</h2>           
             <img src="images/downtown.jpeg" alt="Downtown Apopka Florida">
         </div>
         <div class="container">
