--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
             </div>
         </div>
         <h2>WDD 230: Web Frontend Development</h2>
-        <section class="card">
-            <h3>Learning Activities</h3>
-            <div src="scripts/links.js"></div>
+        <section class="card-box">
+            <div>
+                
+            </div>
         </section>
         <section class="card">
             <h3>WEATHER</h3>
