switched image name settings DIDNT HELP :(

--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -12,14 +12,14 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="images/hero-small.webp" media="(max-width: 500px)">
-                <source srcset="images/hero-medium.webp" media="(max-width: 1000px)">
-                <img srcset="images/hero-large.webp" alt="Feather River California Temple" width="500" height="998">
+                <source srcset="images/hero-large.webp" media="(max-width: 500px)">
+                <source srcset="images/hero-small.webp" media="(max-width: 1000px)">
+                <img srcset="images/hero-medium.webp" alt="Feather River California Temple" width="500" height="998">
             </picture>
         </div>
     </main>
     <footer>
-    <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; WDD 230-1B - Week 03 - Fall 2023</p>
+    <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; WDD 230-1B - Week 03 - Fall 2023</p>
     <p id="lastModified"></p>
     <script src="scripts/getDates.js"></script>
 </footer>
