link edit for psuedo-class.html

--- a/week04/psuedo-class.html
+++ b/week04/psuedo-class.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles/tablebuild.css">
 </head>
 <body>
+	<header>
 <h2>Pseudo-class Fun</h2>
+</header>
 <main>
 	<p>Anchor Tag: <a href="https://churchofjesuschrist.org" target="_blank">The Church of Jesus Christ of Latter-day Saints</a></p>
 
