--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Latter-day Progphets Activity</title>
+  <title>Latter-day Prophets Activity</title>
   <meta name="description" content="Use keywords to describe page">
   <meta name="author" content="Prophets page">
   <link rel="stylesheet" href="styles/prophets.css">
