--- a/week05/psuedo-elements.html
+++ b/week05/psuedo-elements.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Latter-day Progphets Activity</title>
+  <title>Psuedo-Elements Activity</title>
   <meta name="description" content="Use keywords to describe page">
-  <meta name="author" content="Prophets page">
+  <meta name="author" content="Rachael S Varady">
   <link rel="stylesheet" href="styles/psuedo-elements.css">
+</head>
   <header>
 	<h1>Pseudo-element Examples</h1>
   </header>
