footer still at side :(

--- a/week05/psuedo-elements.html
+++ b/week05/psuedo-elements.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US"
->
+<html lang="en-US">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -9,10 +8,9 @@
   <meta name="author" content="Rachael S Varady">
   <link rel="stylesheet" href="styles/psuedo-elements.css">
 </head>
-  <header>
-	<h1>Pseudo-element Examples</h1>
-  </header>
+<body>
   <main>
+    <h1>Pseudo-element Examples</h1>
 	<section>
 		<h2>::selection, ::first-letter, ::first-line</h2>
 		<p class="sel firstline firstletter">Try selecting any of the text in this first paragraph. It has been set to a specific fore- and background color. </p>
@@ -21,7 +19,6 @@
 		<h2>::before, ::after</h2>
 		<p class="before after">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum minus placeat, nostrum dolorum optio libero molestiae. </p>
 	</section>
-
 	<section>
 		<h2>Tasks</h2>
 		<ol>
@@ -30,12 +27,12 @@
 			<li>And LASTLY Do This</li>
 		</ol>
 	</section>
-</main>
-<footer>
-    <p>&copy; 2023 <span id="currentYear"></span> &bull; Rachael S Varady | Psuedo Elements CodePen</p>
-    <p>BYU-Idaho &bull;  WDD 230-1B - Week 05 - Fall 2023</p>
-    <p id="lastModified"></p>
-</footer>
-<script src="scripts/getDates.js"></script>
+    </main>
+    <footer class="footer">
+        <p>&copy; 2023 <span id="currentYear"></span> &bull; Rachael S Varady | Psuedo Elements CodePen</p>
+        <p>BYU-Idaho &bull;  WDD 230-1B - Week 05 - Fall 2023</p>
+        <p id="lastModified"></p>
+    </footer>
+    <script src="scripts/getDates.js"></script>
 </body>
 </html>
