--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,14 +33,7 @@
             <button id="grid">⏹️Grid</button>
             <button id="list">📄List</button>
         </div>
-        <hr>
-        <article class="grid">
-            <section>
-                <img src="images/allspc-office.jpg" alt="all pest control" />
-                <h3>All Pest Control</h3>
-                <p></p>
-                <a href="data/members.json" target="_blank">Website</a>
-            </section>
+        <div class="cards"></div>
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
@@ -49,5 +42,6 @@
     <script src="scripts/chamber.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/members.js"></script>
 </body>
 </html>
