gird and list js added and reworked

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,7 +33,10 @@
             <button id="grid">⏹️Grid</button>
             <button id="list">📄List</button>
         </div>
-        <div class="cards"></div>
+        <hr>
+        <article class="grid">
+
+        </article>
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
