--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,11 +32,12 @@
         <div class="menu">
             <button id="grid">⏹️Grid</button>
             <button id="list">📄List</button>
-        </div>
-        <hr>
-        <article class="grid">
 
-        </article>
+        <hr>
+        <div id="cards">
+
+        </div>
+    </div>
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
