--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>City of Apopka Business Directory</title>
-    <meta name="description" content="Business Directory">
+    <title>Directory for City of Apopka</title>
+    <meta name="description" content="City of Apopka Business Directory">
     <meta name="author" content="Rachael S Varady">
     <meta property="og:title" content="Rachael S Varady - WDD 230 - City of Apopka Chamber of Commerce">
     <meta property="og:type" content="website">
