--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,17 +33,43 @@
             <h2>Apopka Chamber of Commerce</h2>           
             <img src="images/downtown.jpeg" alt="Downtown Apopka Florida">
         </div>
-        <div class="container">
-            <section class="section">
-                <h3>Join the Apopka Chamber of Commerce</h3>
-                <p>Join here</p>
-                <p></p>
-            </section>
             <div class="weather">
                 <h2>Weather</h2>
                 <img id="weather-icon" src="scripts/weather.js" alt="#">
                 <span id="current-temp"></span><figcaption id="weather-description"></figcaption>
             </div>
+        <div class="container">
+            <section class="events">
+                <h3>City Concerts & Events</h3>
+                <div class="card">  
+                    <h3>Event 1</h3>
+                    <P>Date</P>
+                    <p>Time</p>
+                    <p>Location</p>
+                    <p>Description</p>
+                </div>
+                <div class="card">
+                    <h3>Event 2</h3>
+                    <P>Date</P>
+                    <p>Time</p>
+                    <p>Location</p>
+                    <p>Description</p>
+                </div>
+                <div class="card">
+                    <h3>Event 3</h3>
+                    <P>Date</P>
+                    <p>Time</p>
+                    <p>Location</p>
+                    <p>Description</p>
+                </div>
+            </section>
+            <section class="section">
+                <h3>Join the Apopka Chamber of Commerce</h3>
+                <a href="join.html">Sign Up Form Here</a>
+                <br>
+            </section>
+
+
         </div>
         <div class="spotlights">
             <h2 class="business-spotlight">Business Spotlight</h2>
@@ -55,30 +81,7 @@
                 </div>
             </div>
 
-        <section class="events">
-            <h3>City Concerts & Events</h3>
-            <div class="card">  
-                <h3>Event 1</h3>
-                <P>Date</P>
-                <p>Time</p>
-                <p>Location</p>
-                <p>Description</p>
-            </div>
-            <div class="card">
-                <h3>Event 2</h3>
-                <P>Date</P>
-                <p>Time</p>
-                <p>Location</p>
-                <p>Description</p>
-            </div>
-            <div class="card">
-                <h3>Event 3</h3>
-                <P>Date</P>
-                <p>Time</p>
-                <p>Location</p>
-                <p>Description</p>
-            </div>
-        </section>
+
 
     </main>
     <footer>
