contact info added to footer on all pages

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -43,6 +43,10 @@
     </main>
 
     <footer>
+        <p>Contact Apopka Chamber of Commerce <br>
+            555 Main Street<br>
+            Apopka, FL 32712<br>
+            Phone: 407-555-8989</p>
         <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
     </footer>
