--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -29,7 +29,7 @@
         </ul>
     </nav>
     <main>
-        <div class="menu">
+        <div class="directory">
             <button id="grid">⏹️Grid</button>
             <button id="list">📄List</button>
 
@@ -40,6 +40,10 @@
     </div>
     </main>
     <footer>
+        <p>Contact Apopka Chamber of Commerce <br>
+            555 Main Street<br>
+            Apopka, FL 32712<br>
+            Phone: 407-555-8989</p>
         <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
     </footer>
