--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -47,7 +47,7 @@
             555 Main Street<br>
             Apopka, FL 32712<br>
             Phone: 407-555-8989</p>
-        <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
+        <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
     </footer>
     <script  src="scripts/hamburger-menu.js"></script>
