html checker edits

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,15 +33,24 @@
             <h2>Apopka Chamber of Commerce</h2>           
             <img src="images/downtown.jpeg" alt="Downtown Apopka Florida">
         </div>
-            <div class="weather">
+        <div class="sidebar">
+            <div class="sidebar-card">
                 <h2>Weather</h2>
                 <img id="weather-icon" src="scripts/weather.js" alt="#">
                 <span id="current-temp"></span><figcaption id="weather-description"></figcaption>
+                <br>
             </div>
+            <div class="sidebar-card">
+                <h3>Join the Apopka Chamber of Commerce</h3>
+                <a href="join.html">Sign Up Form Here</a>
+            </div>
+        </div>
+        </div>
         <div class="container">
+
             <section class="events">
-                <h3>City Concerts & Events</h3>
                 <div class="card">  
+                    <h3>City Concerts & Events</h3>
                     <h3>Event 1</h3>
                     <P>Date</P>
                     <p>Time</p>
@@ -63,13 +72,6 @@
                     <p>Description</p>
                 </div>
             </section>
-            <section class="section">
-                <h3>Join the Apopka Chamber of Commerce</h3>
-                <a href="join.html">Sign Up Form Here</a>
-                <br>
-            </section>
-
-
         </div>
         <div class="spotlights">
             <h2 class="business-spotlight">Business Spotlight</h2>
