html check error edits

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,7 +47,6 @@
         </div>
         </div>
         <div class="container">
-
             <section class="events">
                 <div class="card">  
                     <h3>City Concerts & Events</h3>
@@ -82,9 +81,7 @@
                     <p>Business Info</p>
                 </div>
             </div>
-
-
-
+        </div>
     </main>
     <footer>
         <p>Contact Apopka Chamber of Commerce <br>
