scripts, scripts, scripts

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -28,16 +28,14 @@
           <li class="active"><a href="directory.html">Directory</a></li>
         </ul>
     </nav>
+    <div class="menu">
+        <button id="grid">⏹️Grid</button>
+        <button id="list">📄List</button>
+    </div>
     <main>
-        <div class="directory">
-            <button id="grid">⏹️Grid</button>
-            <button id="list">📄List</button>
-
-        <hr>
         <div id="cards">
 
         </div>
-    </div>
     </main>
     <footer>
         <p>Contact Apopka Chamber of Commerce <br>
