--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
             <h2>Apopka Chamber of Commerce</h2>           
             <img src="images/downtown.jpeg" alt="Downtown Apopka Florida">
         </div>
-        <div class="sidebar">
+        <section class="sidebar">
             <div class="sidebar-card">
                 <h2>Weather</h2>
                 <img id="weather-icon" src="scripts/weather.js" alt="#">
@@ -44,9 +44,9 @@
                 <h3>Join the Apopka Chamber of Commerce</h3>
                 <a href="join.html">Sign Up Form Here</a>
             </div>
-        </div>
-        </div>
-        <div class="container">
+        </section>
+        <section class="container">
+        <div>
             <section class="events">
                 <div class="card">  
                     <h3>City Concerts & Events</h3>
@@ -72,6 +72,7 @@
                 </div>
             </section>
         </div>
+        </section>
         <div class="spotlights">
             <h2 class="business-spotlight">Business Spotlight</h2>
             <div class="business">
@@ -82,6 +83,7 @@
                 </div>
             </div>
         </div>
+
     </main>
     <footer>
         <p>Contact Apopka Chamber of Commerce <br>
