--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -49,5 +49,6 @@
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/members.js"></script>
+    <script src="scripts/grid.js"></script>
 </body>
 </html>
