--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -36,6 +36,8 @@
         <div id="cards">
 
         </div>
+        <picture><img src="images/array-screenshot-error.png" alt="error console of array" width="1500" height="1000">
+        </picture>
     </main>
     <footer>
         <p>Contact Apopka Chamber of Commerce <br>
@@ -45,6 +47,7 @@
         <p>&copy; <span id="currentYear"></span> &bull; Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
     </footer>
+    <script src="scripts/chamber.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/members.js"></script>
