--- a/chamber/join.html
+++ b/chamber/join.html
@@ -87,8 +87,8 @@
                                     • 4 listings in Chamber online directory</p>
                             </div>
                         </div>
+                </fieldset>
             </fieldset>
-        </div>
             <fieldset>
                 <legend>Business Description</legend><br>
                 <label><textarea id="comments" name="comments" placeholder="Please enter a description of your business or organization here."></textarea>
